# its-almost-like-at-google

./: .gitignore  .hgignore  LICENSE  MODULE.bazel  README.md  scripts.sh  source_me.sh
dotnet/libraries/unity/: README.md
dotnet/libraries/unity/6000.0.32f1/: UnityEditor.AccessibilityModule.xml  UnityEditor.AdaptivePerformanceModule.xml  UnityEditor.BuildProfileModule.xml  UnityEditor.CoreBusinessMetricsModule.xml  UnityEditor.CoreModule.xml  UnityEditor.DeviceSimulatorModule.xml  UnityEditor.EditorToolbarModule.xml  UnityEditor.EmbreeModule.xml  UnityEditor.GIModule.xml  UnityEditor.GraphViewModule.xml  UnityEditor.GraphicsStateCollectionSerializerModule.xml  UnityEditor.GridAndSnapModule.xml  UnityEditor.GridModule.xml  UnityEditor.MultiplayerModule.xml  UnityEditor.Physics2DModule.xml  UnityEditor.PhysicsModule.xml  UnityEditor.PresetsUIModule.xml  UnityEditor.PropertiesModule.xml  UnityEditor.QuickSearchModule.xml  UnityEditor.SafeModeModule.xml  UnityEditor.ShaderFoundryModule.xml  UnityEditor.SketchUpModule.xml  UnityEditor.SpriteMaskModule.xml  UnityEditor.SpriteShapeModule.xml  UnityEditor.SubstanceModule.xml  UnityEditor.TerrainModule.xml  UnityEditor.TextRenderingModule.xml  UnityEditor.TilemapModule.xml  UnityEditor.TreeModule.xml  UnityEditor.UIAutomationModule.xml  UnityEditor.UIElementsModule.xml  UnityEditor.UmbraModule.xml  UnityEditor.VFXModule.xml  UnityEditor.VideoModule.xml  UnityEditor.XRModule.xml  UnityEngine.AIModule.xml  UnityEngine.AMDModule.xml  UnityEngine.AccessibilityModule.xml  UnityEngine.AndroidJNIModule.xml  UnityEngine.AnimationModule.xml  (+33 more)
go/com/yanicksenn/taste/: BUILD  LICENSE  README.md  go.mod  main  main.go  sample.recipe  sample.sh  sample.taste
java/com/yanicksenn/experimental/: README.md
java/com/yanicksenn/flags/: BUILD  Flags.java
java/com/yanicksenn/functions/: BUILD  ThrowingSupplier.java
java/com/yanicksenn/hellogrpc/: BUILD  HelloClient.java  HelloServer.java  README.md  hello_service.proto
java/com/yanicksenn/helloguice/: BUILD  HelloGuice.java  HelloGuiceLauncher.java  PersonStorage.java  ProductionStorage.java  Storage.java  data.proto
java/com/yanicksenn/helloproto/: BUILD  HelloProto.java  README.md  data.proto
java/com/yanicksenn/helloworld/: BUILD  HelloWorld.java  README.md
java/com/yanicksenn/numbers/: BUILD  Numbers.java
java/plugins/: BUILD
java/plugins/autovalue/: BUILD  README.md
javatests/com/yanicksenn/flags/: BUILD  FlagsTest.java
javatests/com/yanicksenn/helloguice/: BUILD  HelloGuiceTest.java  InMemoryStorage.java
javatests/com/yanicksenn/numbers/: BUILD  NumbersTest.java
protos/date/: BUILD  README.md  data.proto
protos/datetime/: BUILD  README.md  datetime.proto
python/com/yanicksenn/flags/: BUILD  flags.py
scripts/bash/: README.md  _scripts.sh
scripts/bash/search/: BUILD  README.md  search_todos.sh
scripts/bash/update_license/: BUILD  LICENSE.template  README.md  run.sh  update_license.sh
toolchains/: BUILD
(+193 files in other folders)
