"Bazel dependencies"

# See https://registry.bazel.build/ registry.
bazel_dep(name = "rules_jvm_external", version = "6.0")
bazel_dep(name = "rules_proto", version = "6.0.0")
bazel_dep(name = "protobuf", version = "27.1")
bazel_dep(name = "grpc-java", version = "1.64.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "junit:junit:4.12",
        "com.google.truth:truth:1.4.2",
        "com.google.guava:guava:31.1-jre",
        "com.google.inject:guice:7.0.0",
    ],
    fetch_sources = True,
    repositories = [
        "http://uk.maven.org/maven2",
        "https://jcenter.bintray.com/",
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

register_toolchains(
    "//toolchains:py_toolchain"
)