"Bazel dependencies"

# See https://registry.bazel.build/ registry.
bazel_dep(name = "rules_jvm_external", version = "6.0")
bazel_dep(name = "rules_proto", version = "6.0.0")
bazel_dep(name = "protobuf", version = "27.1")

ARTIFACTS_GOOGLE = [
    "com.google.truth:truth:1.4.2",
    "com.google.guava:guava:31.1-jre",
    "com.google.inject:guice:7.0.0",
    "com.google.auto.value:auto-value:1.11.0",
    "com.google.auto.value:auto-value-annotations:1.11.0",
]

ARTIFACTS_JMONKEYENGINE = [
    "org.jmonkeyengine:jme3-core:3.6.0-stable",
    "org.jmonkeyengine:jme3-desktop:3.6.0-stable",
    "org.jmonkeyengine:jme3-lwjgl3:3.6.0-stable",
]

ARTIFACTS_MISC = [
    "junit:junit:4.12",
    "javax.annotation:javax.annotation-api:1.3.2",
    "pl.pragmatists:JUnitParams:1.0.4",
    "org.xerial:sqlite-jdbc:3.46.0.0",
]

ARTIFACTS_ALL = ARTIFACTS_GOOGLE + ARTIFACTS_JMONKEYENGINE + ARTIFACTS_MISC

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = ARTIFACTS_ALL,
    fetch_sources = True,
    repositories = [
        "http://uk.maven.org/maven2",
        "https://jcenter.bintray.com/",
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

register_toolchains(
    "//toolchains:py_toolchain",
)
